# dx-www

./: .gitignore  CLI.md  CODING_STANDARD.md  CURRENT_WEB_DEVELOPMENT.md  Cargo.toml  DETAILS.md  DRIVEN.md  DX.md  DXM.md  DXM_DRAFT.md  DXM_PLAN.md  DX_EXTENSION_&_CLI.md  DX_FORGE.md  DX_JS_COMPATABILITY.md  DX_JS_MONOREPO.md  DX_JS_RUNTIME.md  DX_JS_TEST.md  DX_MARKDOWN.md  DX_PYTHON_PACKAGE_MANAGER.md  DX_SERIALIZER_EXTENSION.md  EXTENSION.md  GENERATOR.md  HUMAN.md  KIRO.md  LLL.md  NEXT_STEPS.md  PROBLEMS.md  README.md  SERIALIZER_EXTENSION.md  STYLE.md  THOUGHTS.md  Thought.md  WORKSPACE.md  WORKSPACE_PLANNING.md  capnp_benchmark_results.txt  dx  dx.css  dx.json  dx.md  dx.toml  (+6 more)
benchmarks/json/: Cargo.toml  README.md
benchmarks/json/benches/: json_benchmark.rs
benchmarks/throughput/: Cargo.toml  README.md  axum_results.txt  hyper_raw_server.rs  hyper_results.txt  plaintext_server.rs  results.md  run_benchmark.sh
crates/check/: Cargo.toml  DX_CHECK.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  README.md  ROADMAP.md  TASKLIST.md
crates/check/.github/: ADDING_LANGUAGE_SUPPORT.md  ARCHITECTURE.md
crates/check/benches/: lint_benchmark.rs
crates/check/docs/: DXS_FILES_GUIDE.md  DXS_FORMAT_SPEC.md  DX_CHECK.md  DX_CONFIG_SPEC.md  LANGUAGE_INTEGRATION_SUMMARY.md
crates/check/rules/: cpp-rules.dxs  css-rules.dxs  go-rules.dxs  html-rules.dxs  js-rules.dxs  json-rules.dxs  kt-rules.dxs  md-rules.dxs  php-rules.dxs  py-rules.dxs  rs-rules.dxs  toml-rules.dxs  ts-rules.dxs  yaml-rules.dxs
crates/check/src/: cache.rs  ci.rs  cli.rs  cloud.rs  config.rs  diagnostics.rs  engine.rs  fix.rs  lib.rs  (+7 more)
crates/cli/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/client/: Cargo.toml
crates/crate-lint/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LINT_REPORT.md  LINT_REPORT_NEW.md  README.md
crates/driven/: ARCHITECTURE.md  BINARY_FORMAT.md  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
crates/dx/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/dx-auth/: Cargo.toml
crates/dx-bundler-v2/: Cargo.toml
crates/dx-cli/: Cargo.toml
crates/dx-client/: Cargo.toml
crates/dx-js-bundler/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md
crates/dx-js-compatibility/: Cargo.toml  README.md
crates/dx-js-monorepo/: Cargo.toml
crates/dx-js-runtime/: Cargo.toml  README.md
crates/dx-query/: Cargo.toml  README.md
crates/dx-serializer/: Cargo.toml  README.md  README.md.backup  toon_benchmark_results.txt
crates/dx-stack/: Cargo.toml
crates/dx-sync/: Cargo.toml  README.md
crates/dx-www/: Cargo.toml  PLANNING.md  README.md
crates/dx-www-guard/: Cargo.toml
crates/dx-www-interaction/: Cargo.toml
crates/dx-www-serializer/: Cargo.toml  README.md
crates/dx-www-state/: Cargo.toml
crates/error/: Cargo.toml  README.md
crates/i18n/: CHANGELOG.md  Cargo.toml
crates/icon/: CHANGELOG.md  Cargo.toml
playground/: BENCHMARK_SUMMARY_VISUAL.txt  BENCHMARK_VISUAL_SUMMARY.txt  Cargo.toml  DIRECTORY_MAP.txt  FORMATS_README.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LOCAL_INFRASTRUCTURE_COMPLETE.md  README.md  README_BENCHMARKS.md  app-complex.tsx  bench-arithmetic-chains.js  bench-comparisons.js  bench-math-heavy.js  bench-math.js  bench-mixed-operations.js  bench-nested-math.js  bench-pure-math.js  bench-variables.js  benchmark_v2.sh  count-braces.js  dx  dx-full.json  dx-impportant  dx-updated.json  dx.config  dx.dx  dx.json  dx.toml  dx.toon  dx.txt  dx.yml  human.dx  llm.dx  minimal-test.js  package.json  production-benchmark.py  production-benchmark.sh  quick_benchmark.sh  real-world-pkg-benchmark.sh  (+18 more)
playground/benchmark-simple/: index.ts  utils.ts
playground/benchmark-test/: RESULTS.txt  dx.lock.json  package.json
playground/benchmarks/: dx-vs-toon-rkyv.rs  full-comparison.rs  hikes-comparison.rs  infinity-comparison.rs  omega-comparison.rs  size-comparison.rs  speed-comparison.rs
playground/bundler-comparison-test/: README.md  TECHNICAL_ANALYSIS.md  TEST_RESULTS.md  test-bundlers.sh
playground/bundler-test/: index.tsx  simple.js  utils.ts
playground/cold-test/: dx.lock.json  package.json
playground/components/: UserCard.tsx
playground/data/: complex-infinity.dx  complex-omega.dx  complex.dx  complex.json  complex.toon  hikes-infinity-human.dx  hikes-infinity.dx  hikes-omega.dx  hikes-optimized.dx  hikes-toon.toon  hikes.dx  hikes.toon  hikes.yaml  simple-infinity.dx  simple-omega.dx  simple.dx  simple.json  simple.toon
playground/examples/: dx-human-example.rs  dx-machine-example.rs
playground/final-victory/: benchmark-all.ps1  benchmark-all.sh
playground/fusion-test/: app-full.js  app-simple.js  app.js  bun-bundle.js  bun-full-bundle.js  bun-test.js  bundle.js  dx-bundle.js  dx-test.js  react-large.dxm  react-large.js  react-mock.dxm  react-mock.js
playground/output/: bun-bundle.js  bun-test.js  dx-bundle.js  final-test.js  final2.js  test-bundle.js
playground/package-manager/: COMPREHENSIVE_BENCHMARK.md  package.json
playground/real-world-test/: OPTIMIZATIONS_V1.5.md  REAL_WORLD_TEST.md  SUMMARY.md  THREE_TIER_COMPLETE.md  VICTORY_10X.md  WORKING_COMPARISON.md  package.json
playground/results/: ABSOLUTE_ZERO_186_BYTES.md  BENCHMARK_RESULTS.md  DX_INFINITY_ANALYSIS.md  DX_INFINITY_FINAL_VERDICT.md  DX_INFINITY_IMPLEMENTATION_COMPLETE.md  DX_OMEGA_ANALYSIS.md  FINAL_VERDICT.md  PHYSICS_LIMIT_REACHED.md  TOON_VS_DX_COMPARISON.md  VISUAL_COMPARISON.txt  toon-vs-dx-visual.html
playground/serializer/: BENCHMARK_RESULTS_DEC17.md  BENCHMARK_RESULTS_FINAL.md  Cargo.toml  FINAL_SUMMARY.md  INSTALLATION.md  MISSION_COMPLETE.md  QUICK_START.md  README.md  TEST_RESULTS.md  benchmark_capnp_results.txt  benchmark_output.txt  benchmark_with_capnp.txt  build.rs  capnp_benchmark_final.txt  complete_benchmark_results.txt  complete_results.txt  quick-test.bat  run-benchmarks.bat  run-benchmarks.sh  verify-dx-infinity.bat  verify-dx-infinity.sh
playground/simple-test/: dx.lock.json  package.json
playground/src/: dx_format_test.rs
playground/victory-test/: package.json
(+3413 files in other folders)
