[workspace]
resolver = "2"
members = [
    # Unified DX CLI
    "crates/dx",
    
    # Core runtime crates
    "crates/core",
    "crates/dom",
    "crates/morph",
    "crates/sched",
    
    # Binary protocol
    "crates/binary",
    "crates/packet",
    
    # DX Serializer (ultra-efficient format)
    "crates/dx-serializer",
    
    # Client runtimes (WASM)
    "crates/dx-client",
    "crates/client-tiny",
    
    # Developer tools
    "crates/dx-www",
    "crates/dx-cli",
    "crates/dx-forge",
    
    # Server-side (optional)
    "crates/dx-server",
    "crates/cache",
    
    # Style system
    "crates/dx-style",
    "crates/dx-icon",
    "crates/dx-media",
    "crates/dx-font",
    
    # NEW: Phase 1 - Data Layer
    "crates/dx-form",
    "crates/dx-query",
    "crates/dx-db",
    
    # NEW: Phase 2 - Logic Layer
    "crates/dx-state",
    "crates/dx-auth",
    
    # NEW: Phase 3 - Resilience Layer
    "crates/dx-sync",
    "crates/dx-offline",
    "crates/dx-error",
    "crates/dx-guard",
    "crates/dx-interaction",
    
    # NEW: Phase 4 - Polish Layer
    "crates/dx-fallback",
    "crates/dx-a11y",
    "crates/dx-print",
    "crates/dx-rtl",
    "crates/dx-debug",
    
    # NEW: Internationalization (i18n) - Translation & TTS
    "crates/dx-i18n",
    
    # NEW: JavaScript/TypeScript Runtime (10x faster than Bun)
    "crates/dx-js-runtime",
    
    # NEW: AI-Assisted Development Orchestrator
    "crates/driven",
    
    # NEW: Binary-first monorepo management
    "crates/dx-js-monorepo",
    
    # NEW: Binary Dawn Code Generator
    "crates/dx-generator",
    
    # NEW: Universal Development Environment Configuration
    "crates/dx-workspace",
    
    # Examples & Playground
    "examples/hello-world",
]

# Exclude nested workspaces (they manage their own internal crates)
exclude = [
    "crates/dx-js-bundler",       # Has 10 internal crates
    "crates/dx-js-test-runner",   # Has own workspace
    "crates/dx-js-package-manager", # Has 12 internal crates
    "crates/dx-js-compatibility", # Has 12 internal sub-crates
    "crates/oxc",                 # External submodule
    "playground",                 # Experiments
    "benchmarks",                 # Performance tests
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dx-www Runtime Team <team@dx-www.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dx-www/dx-www-runtime"
homepage = "https://dx-www.dev"
documentation = "https://docs.dx-www.dev"

[workspace.dependencies]
# WASM Interop - Latest Stable
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlTemplateElement",
    "DocumentFragment",
    "Text",
    "Comment",
    "Performance",
    "console",
] }

# Zero-Copy Serialization
bincode = "2.0.0-rc.3"
bytemuck = { version = "1.21", features = ["derive"] }

# Memory Management
bumpalo = "3.16"
once_cell = "1.20"

# Error Handling
console_error_panic_hook = "0.1"

# Ecosystem crate dependencies (latest versions)
regex-automata = "0.4"
bitflags = "2.6"
reqwest = { version = "0.12", default-features = false }
gloo-net = "0.6"
dashmap = "6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"], default-features = false }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
zerocopy = { version = "0.8", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"
webauthn-rs = "0.5"
indexed_db_futures = "0.5"
lz4_flex = "0.11"
tokio-tungstenite = "0.24"
flume = "0.11"
yrs = "0.21"
maud = "0.26"
oxc_parser = "0.39"
miette = "7.4"
lightningcss = "1.0.0-alpha.71"
unic-langid = "0.9"
base64 = "0.22"
atomic = "0.6"
parking_lot = "0.12"
bytes = "1.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Internal Workspace Crates
# Internal Workspace Crates
dx-core = { path = "crates/core" }
dx-dom = { path = "crates/dom" }
dx-morph = { path = "crates/morph" }
dx-sched = { path = "crates/sched" }
dx-www = { path = "crates/dx-www" }
dx-binary = { path = "crates/binary" }
dx-packet = { path = "crates/packet" }
dx-client = { path = "crates/dx-client" }

# NEW: Internal ecosystem crates
dx-form = { path = "crates/dx-form" }
dx-query = { path = "crates/dx-query" }
dx-db = { path = "crates/dx-db" }
dx-state = { path = "crates/dx-state" }
dx-auth = { path = "crates/dx-auth" }
dx-sync = { path = "crates/dx-sync" }
dx-offline = { path = "crates/dx-offline" }
dx-error = { path = "crates/dx-error" }
dx-guard = { path = "crates/dx-guard" }
dx-interaction = { path = "crates/dx-interaction" }
dx-fallback = { path = "crates/dx-fallback" }
dx-a11y = { path = "crates/dx-a11y" }
dx-print = { path = "crates/dx-print" }
dx-rtl = { path = "crates/dx-rtl" }
dx-debug = { path = "crates/dx-debug" }
dx-i18n = { path = "crates/dx-i18n" }


# ============================================================================
# AGGRESSIVE SIZE OPTIMIZATION (9KB TARGET)
# ============================================================================

[profile.dev]
panic = "abort"       # Required for no_std crates

[profile.release]
opt-level = "z"       # Optimize for size (not speed)
lto = true            # Link Time Optimization (removes unused code)
codegen-units = 1     # Slower build, smaller binary
panic = "abort"       # Remove stack unwinding (~20KB savings)
strip = true          # Strip symbols

