[workspace]
resolver = "2"
members = [
    # =========================================================================
    # DX TOOLS (no dx- prefix)
    # =========================================================================
    "crates/style",
    "crates/forge",
    "crates/media",
    "crates/icon",
    "crates/font",
    "crates/generator",
    "crates/workspace",
    "crates/driven",
    "crates/debug",
    "crates/error",
    "crates/stack",
    "crates/i18n",
    "crates/serializer",
    
    # =========================================================================
    # DX CLI (main entry points)
    # =========================================================================
    "crates/dx",
    "crates/dx-cli",
    
    # =========================================================================
    # DX STACK - JavaScript/TypeScript (dx-js- prefix)
    # =========================================================================
    "crates/dx-js-runtime",
    "crates/dx-js-monorepo",
    
    # =========================================================================
    # DX WWW - Web Framework (dx-www- prefix)
    # =========================================================================
    # Core Runtime
    "crates/dx-www-core",
    "crates/dx-www-dom",
    "crates/dx-www-morph",
    "crates/dx-www-sched",
    
    # Binary Protocol
    "crates/dx-www-binary",
    "crates/dx-www-packet",
    
    # Client Runtimes (WASM)
    "crates/dx-www-client",
    "crates/dx-www-client-tiny",
    
    # Server & Cache
    "crates/dx-www-server",
    "crates/dx-www-cache",
    
    # Data Layer
    "crates/dx-www-form",
    "crates/dx-www-query",
    "crates/dx-www-db",
    
    # Logic Layer
    "crates/dx-www-state",
    "crates/dx-www-auth",
    
    # Resilience Layer
    "crates/dx-www-sync",
    "crates/dx-www-offline",
    "crates/dx-www-guard",
    "crates/dx-www-interaction",
    
    # Polish Layer
    "crates/dx-www-fallback",
    "crates/dx-www-a11y",
    "crates/dx-www-print",
    "crates/dx-www-rtl",
    
    # Compiler (transpiler-to-binary pipeline)
    "crates/dx-www",
    
    # Binary Dawn - Cross-platform I/O reactor
    "crates/dx-reactor",
    "crates/dx-db-teleport",
    
    # =========================================================================
    # EXAMPLES
    # =========================================================================
    "examples/hello-world",
]

# Exclude nested workspaces (they manage their own internal crates)
exclude = [
    "crates/dx-js-bundler",         # Has 10 internal crates
    "crates/dx-js-test-runner",     # Has own workspace
    "crates/dx-js-package-manager", # Has 12 internal crates
    "crates/dx-js-compatibility",   # Has 12 internal sub-crates
    "playground",                   # Experiments
    "benchmarks",                   # Performance tests
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dx-www Runtime Team <team@dx-www.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dx-www/dx-www-runtime"
homepage = "https://dx-www.dev"
documentation = "https://docs.dx-www.dev"

[workspace.dependencies]
# WASM Interop - Latest Stable
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlTemplateElement",
    "DocumentFragment",
    "Text",
    "Comment",
    "Performance",
    "console",
] }

# Zero-Copy Serialization
bincode = "2.0.0-rc.3"
bytemuck = { version = "1.21", features = ["derive"] }

# Memory Management
bumpalo = "3.16"
once_cell = "1.20"

# Error Handling
console_error_panic_hook = "0.1"

# Ecosystem crate dependencies (latest versions)
regex-automata = "0.4"
bitflags = "2.6"
reqwest = { version = "0.12", default-features = false }
gloo-net = "0.6"
dashmap = "6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"], default-features = false }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
zerocopy = { version = "0.8", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"
webauthn-rs = "0.5"
indexed_db_futures = "0.5"
lz4_flex = "0.11"
tokio-tungstenite = "0.24"
flume = "0.11"
yrs = "0.21"
maud = "0.26"
oxc_parser = "0.39"
miette = "7.4"
lightningcss = "1.0.0-alpha.71"
unic-langid = "0.9"
base64 = "0.22"
atomic = "0.6"
parking_lot = "0.12"
bytes = "1.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Internal Workspace Crates
# =========================================================================
# DX TOOLS
# =========================================================================
style = { path = "crates/style" }
forge = { path = "crates/forge" }
media = { path = "crates/media" }
icon = { path = "crates/icon" }
font = { path = "crates/font" }
generator = { path = "crates/generator" }
workspace = { path = "crates/workspace" }
driven = { path = "crates/driven" }
debug = { path = "crates/debug" }
error = { path = "crates/error" }
stack = { path = "crates/stack" }
i18n = { path = "crates/i18n" }
serializer = { path = "crates/serializer" }

# =========================================================================
# DX WWW
# =========================================================================
dx-www-core = { path = "crates/dx-www-core" }
dx-www-dom = { path = "crates/dx-www-dom" }
dx-www-morph = { path = "crates/dx-www-morph" }
dx-www-sched = { path = "crates/dx-www-sched" }
dx-www = { path = "crates/dx-www" }
dx-www-binary = { path = "crates/dx-www-binary" }
dx-www-packet = { path = "crates/dx-www-packet" }
dx-www-client = { path = "crates/dx-www-client" }
dx-www-client-tiny = { path = "crates/dx-www-client-tiny" }
dx-www-server = { path = "crates/dx-www-server" }
dx-www-cache = { path = "crates/dx-www-cache" }
dx-www-form = { path = "crates/dx-www-form" }
dx-www-query = { path = "crates/dx-www-query" }
dx-www-db = { path = "crates/dx-www-db" }
dx-www-state = { path = "crates/dx-www-state" }
dx-www-auth = { path = "crates/dx-www-auth" }
dx-www-sync = { path = "crates/dx-www-sync" }
dx-www-offline = { path = "crates/dx-www-offline" }
dx-www-guard = { path = "crates/dx-www-guard" }
dx-www-interaction = { path = "crates/dx-www-interaction" }
dx-www-fallback = { path = "crates/dx-www-fallback" }
dx-www-a11y = { path = "crates/dx-www-a11y" }
dx-www-print = { path = "crates/dx-www-print" }
dx-www-rtl = { path = "crates/dx-www-rtl" }

# Binary Dawn
dx-reactor = { path = "crates/dx-reactor" }
dx-db-teleport = { path = "crates/dx-db-teleport" }


# ============================================================================
# AGGRESSIVE SIZE OPTIMIZATION (9KB TARGET)
# ============================================================================

[profile.dev]
panic = "abort"       # Required for no_std crates

[profile.release]
opt-level = "z"       # Optimize for size (not speed)
lto = true            # Link Time Optimization (removes unused code)
codegen-units = 1     # Slower build, smaller binary
panic = "abort"       # Remove stack unwinding (~20KB savings)
strip = true          # Strip symbols

