[workspace]
resolver = "2"
members = [
    # =========================================================================
    # DX TOOLS (no dx- prefix)
    # =========================================================================
    "crates/style",
    "crates/forge",
    "crates/media",
    "crates/icon",
    "crates/font",
    "crates/generator",
    "crates/workspace",
    "crates/driven",
    "crates/www/debug",
    "crates/www/error",
    "crates/i18n",
    "crates/serializer",

    # =========================================================================
    # DX CLI (main entry points)
    # =========================================================================
    "crates/dx",
    "crates/cli",
    "crates/crate-lint",

    # =========================================================================
    # DX STACK - JavaScript/TypeScript (in javascript/ folder)
    # =========================================================================
    "crates/javascript/runtime",
    "crates/javascript/monorepo",

    # =========================================================================
    # DX WWW - Web Framework (in www/ folder)
    # =========================================================================
    # Core Runtime
    "crates/www/framework-core",
    "crates/www/dom",
    "crates/www/morph",
    "crates/www/sched",

    # Binary Protocol
    "crates/www/binary",
    "crates/www/packet",

    # Client Runtimes (WASM)
    "crates/www/client",
    "crates/www/client-tiny",

    # Server & Cache
    "crates/www/server",
    "crates/www/cache",

    # Data Layer
    "crates/www/form",
    "crates/www/query",
    "crates/www/db",

    # Logic Layer
    "crates/www/state",
    "crates/www/auth",

    # Resilience Layer
    "crates/www/sync",
    "crates/www/offline",
    "crates/www/guard",
    "crates/www/interaction",

    # Polish Layer
    "crates/www/fallback",
    "crates/www/a11y",
    "crates/www/print",
    "crates/www/rtl",

    # Compiler (transpiler-to-binary pipeline)
    "crates/www/core",

    # Binary Dawn - Cross-platform I/O reactor
    "crates/www/reactor",
    "crates/www/db-teleport",
]

# Exclude nested workspaces (they manage their own internal crates)
exclude = [
    "crates/javascript/bundler",         # Has 10 internal crates
    "crates/javascript/test-runner",     # Has own workspace
    "crates/javascript/package-manager", # Has 12 internal crates
    "crates/javascript/compatibility",   # Has 12 internal sub-crates
    "crates/check",                      # Has own workspace with submodules
    "playground",                        # Experiments
    "benchmarks",                        # Performance tests
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dx-www Runtime Team <team@dx-www.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dx-www/dx-www-runtime"
homepage = "https://dx-www.dev"
documentation = "https://docs.dx-www.dev"

[workspace.dependencies]
# WASM Interop - Latest Stable
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlTemplateElement",
    "DocumentFragment",
    "Text",
    "Comment",
    "Performance",
    "console",
] }

# Zero-Copy Serialization
bincode = "2.0.0-rc.3"
bytemuck = { version = "1.21", features = ["derive"] }

# Memory Management
bumpalo = "3.16"
once_cell = "1.20"

# Error Handling
console_error_panic_hook = "0.1"

# Ecosystem crate dependencies (latest versions)
regex-automata = "0.4"
bitflags = "2.6"
reqwest = { version = "0.12", default-features = false }
gloo-net = "0.6"
dashmap = "6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
], default-features = false }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
zerocopy = { version = "0.8", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"
webauthn-rs = "0.5"
indexed_db_futures = "0.5"
lz4_flex = "0.11"
tokio-tungstenite = "0.24"
flume = "0.11"
yrs = "0.21"
maud = "0.26"
oxc_parser = "0.39"
miette = "7.4"
lightningcss = "1.0.0-alpha.71"
unic-langid = "0.9"
base64 = "0.22"
atomic = "0.6"
parking_lot = "0.12"
bytes = "1.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Internal Workspace Crates
# =========================================================================
# DX TOOLS
# =========================================================================
style = { path = "crates/style" }
forge = { path = "crates/forge" }
media = { path = "crates/media" }
icon = { path = "crates/icon" }
font = { path = "crates/font" }
generator = { path = "crates/generator" }
workspace = { path = "crates/workspace" }
driven = { path = "crates/driven" }
debug = { path = "crates/www/debug" }
error = { path = "crates/www/error" }
i18n = { path = "crates/i18n" }
serializer = { path = "crates/serializer" }

# =========================================================================
# DX WWW
# =========================================================================
dx-www-core = { path = "crates/www/framework-core" }
dx-www-dom = { path = "crates/www/dom" }
dx-www-morph = { path = "crates/www/morph" }
dx-www-sched = { path = "crates/www/sched" }
dx-www = { path = "crates/www/core" }
dx-www-binary = { path = "crates/www/binary" }
dx-www-packet = { path = "crates/www/packet" }
dx-www-client = { path = "crates/www/client" }
dx-www-client-tiny = { path = "crates/www/client-tiny" }
dx-www-server = { path = "crates/www/server" }
dx-www-cache = { path = "crates/www/cache" }
dx-www-form = { path = "crates/www/form" }
dx-www-query = { path = "crates/www/query" }
dx-www-db = { path = "crates/www/db" }
dx-www-state = { path = "crates/www/state" }
dx-www-auth = { path = "crates/www/auth" }
dx-www-sync = { path = "crates/www/sync" }
dx-www-offline = { path = "crates/www/offline" }
dx-www-guard = { path = "crates/www/guard" }
dx-www-interaction = { path = "crates/www/interaction" }
dx-www-fallback = { path = "crates/www/fallback" }
dx-www-a11y = { path = "crates/www/a11y" }
dx-www-print = { path = "crates/www/print" }
dx-www-rtl = { path = "crates/www/rtl" }

# Binary Dawn
dx-reactor = { path = "crates/www/reactor" }
dx-db-teleport = { path = "crates/www/db-teleport" }


# ============================================================================
# AGGRESSIVE SIZE OPTIMIZATION (9KB TARGET)
# ============================================================================

[profile.dev]
panic = "abort" # Required for no_std crates

[profile.release]
opt-level = "z"   # Optimize for size (not speed)
lto = true        # Link Time Optimization (removes unused code)
codegen-units = 1 # Slower build, smaller binary
panic = "abort"   # Remove stack unwinding (~20KB savings)
strip = true      # Strip symbols
