[package]
name = "dx-playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "size-comparison"
path = "benchmarks/size-comparison.rs"

[[bin]]
name = "speed-comparison"
path = "benchmarks/speed-comparison.rs"

[[bin]]
name = "hikes-comparison"
path = "benchmarks/hikes-comparison.rs"

[[bin]]
name = "full-comparison"
path = "benchmarks/full-comparison.rs"

[[bin]]
name = "omega-comparison"
path = "benchmarks/omega-comparison.rs"

[[bin]]
name = "infinity-comparison"
path = "benchmarks/infinity-comparison.rs"

[dependencies]
dx-serializer = { path = "../crates/serializer" }
