[package]
name = "dx-benchmark-throughput"
version = "0.1.0"
edition = "2021"
description = "Throughput benchmarks for dx-server"
publish = false

[workspace]

[[bin]]
name = "plaintext_server"
path = "plaintext_server.rs"

[[bin]]
name = "hyper_raw_server"
path = "hyper_raw_server.rs"

[dependencies]
# Axum benchmark server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

# Raw Hyper for maximum throughput comparison
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
