[package]
name = "dx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Unified CLI for the dx ecosystem."
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
console = "0.15"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
num_cpus = "1.16"

# Internal
dx-www = { path = "../www/core" }
forge = { path = "../forge" }
style = { path = "../style" }
dx_serializer = { path = "../serializer", package = "serializer" }
