[package]
name = "dx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Unified CLI for the dx ecosystem."
keywords = ["cli", "dx", "tooling", "build", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
console = "0.15"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
num_cpus = "1.16"

# Internal
dx-www = { path = "../www/core" }
dx-forge = { path = "../forge" }
dx-style = { path = "../style" }
dx-serializer = { path = "../serializer" }
