[package]
name = "dx-client"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sub-20KB WASM runtime for dx-www - pure FFI, no wasm-bindgen"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NO external dependencies for minimal size!
# All DOM operations via FFI to JavaScript host

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
