[package]
name = "dx-crate-lint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Validation tool for DX ecosystem crate standards and conventions"
readme = "README.md"
keywords = ["lint", "validation", "cargo", "workspace", "standards"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "dx_crate_lint"
path = "src/lib.rs"

[[bin]]
name = "dx-crate-lint"
path = "src/main.rs"

[dependencies]
# Serialization and parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system operations
walkdir = "2.5"

# Pattern matching
regex = "1.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Terminal output
console = "0.15"
owo-colors = "4.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.14"

[features]
default = []
