[package]
name = "dx-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Binary authentication - Ed25519 tokens with passkey support"

[lib]
name = "dx_auth"
path = "src/lib.rs"

[dependencies]
# Ed25519 digital signatures
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Secure randomness
rand = "0.8"

# Password hashing
argon2 = "0.5"

# Passkey/WebAuthn support
webauthn-rs = { version = "0.5", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"

# Time handling
chrono = "0.4"

# Base64 encoding
base64 = "0.22"

# Internal
dx-packet = { workspace = true, features = ["std"], optional = true }

[features]
default = ["std", "passkey"]
std = ["dx-packet"]
passkey = ["webauthn-rs"]

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
