[workspace]
resolver = "2"
members = [
    "crates/dx-bundle-core",
    "crates/dx-bundle-simd",
    "crates/dx-bundle-pipeline",
    "crates/dx-bundle-cache",
    "crates/dx-bundle-parallel",
    "crates/dx-bundle-delta",
    "crates/dx-bundle-ir",
    "crates/dx-bundle-emit",
    "crates/dx-bundle-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicholasoxford/dx"
authors = ["Dx Team"]

[workspace.dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "6.1"

# Serialization
bincode = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
blake3 = "1.5"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Memory
memmap2 = "0.9"
bumpalo = "3.16"
bytemuck = { version = "1.21", features = ["derive"] }

# Async
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Internal crates
dx-bundle-core = { path = "crates/dx-bundle-core" }
dx-bundle-simd = { path = "crates/dx-bundle-simd" }
dx-bundle-pipeline = { path = "crates/dx-bundle-pipeline" }
dx-bundle-cache = { path = "crates/dx-bundle-cache" }
dx-bundle-parallel = { path = "crates/dx-bundle-parallel" }
dx-bundle-delta = { path = "crates/dx-bundle-delta" }
dx-bundle-ir = { path = "crates/dx-bundle-ir" }
dx-bundle-emit = { path = "crates/dx-bundle-emit" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
