[package]
name = "dx-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dx-WWW Team"]
description = "The Unified CLI for the dx ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
console = "0.15"
tokio = { version = "1.36", features = ["full"] }

# Internal
dx-www = { path = "../dx-www" }
dx-forge = { path = "../dx-forge" }
dx-style = { path = "../dx-style" }
