[package]
name = "dx-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dx-WWW Team"]
description = "The Unified CLI for the dx ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
console = "0.15"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
num_cpus = "1.16"

# Internal
dx-www = { path = "../dx-www" }
forge = { path = "../forge" }
style = { path = "../style" }
dx_serializer = { path = "../serializer", package = "serializer" }
