[package]
name = "dx-js-bundler"
version = "0.1.0"
edition = "2024"
authors = ["DX Team"]
description = "Binary Dawn JavaScript Bundler - 3x faster than Bun"
license = "MIT"
repository = "https://github.com/dx-org/dx"

[workspace]
members = [
    "crates/dx-bundle-core",
    "crates/dx-bundle-graph",
    "crates/dx-bundle-resolve",
    "crates/dx-bundle-parse",
    "crates/dx-bundle-transform",
    "crates/dx-bundle-tree-shake",
    "crates/dx-bundle-concat",
    "crates/dx-bundle-minify",
    "crates/dx-bundle-sourcemap",
    "crates/dx-bundle-cli",
]

[workspace.dependencies]
# Core dependencies
memmap2 = "0.9"
dashmap = "6.1"
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Hashing & crypto
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

# Serialization
bytemuck = { version = "1.19", features = ["derive"] }
bincode = "2.0.0-rc"

# File system
walkdir = "2.5"
notify = "7.0"

# OXC Parser
oxc_parser = "0.36"
oxc_ast = "0.36"
oxc_span = "0.36"
oxc_allocator = "0.36"

# CLI
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"

# Testing
tempfile = "3.23"

# Utilities
once_cell = "1.20"
num_cpus = "1.16"

[dependencies]
# Re-export workspace crates
dx-bundle-core = { path = "crates/dx-bundle-core" }
dx-bundle-graph = { path = "crates/dx-bundle-graph" }
dx-bundle-resolve = { path = "crates/dx-bundle-resolve" }
dx-bundle-parse = { path = "crates/dx-bundle-parse" }
dx-bundle-transform = { path = "crates/dx-bundle-transform" }
dx-bundle-tree-shake = { path = "crates/dx-bundle-tree-shake" }
dx-bundle-concat = { path = "crates/dx-bundle-concat" }
dx-bundle-minify = { path = "crates/dx-bundle-minify" }
dx-bundle-sourcemap = { path = "crates/dx-bundle-sourcemap" }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
