[package]
name = "dx-js-compatibility"
version = "0.1.0"
edition = "2021"
authors = ["DX Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dx-www/dx-www-runtime"
description = "100% Bun API compatibility layer with 10-50x performance gains"
keywords = ["bun", "nodejs", "compatibility", "runtime", "javascript"]
categories = ["development-tools", "web-programming"]

[features]
default = ["node-core", "web-core", "bun-core"]

# Core compatibility layers
node-core = ["dep:dx-compat-node"]
web-core = ["dep:dx-compat-web"]
bun-core = ["dep:dx-compat-bun"]

# Extended Bun features
bun-sqlite = ["dep:dx-compat-sqlite"]
bun-s3 = ["dep:dx-compat-s3"]
bun-ffi = ["dep:dx-compat-ffi"]
bun-shell = ["dep:dx-compat-shell"]

# Build and development features
compile = ["dep:dx-compat-compile"]
hmr = ["dep:dx-compat-hmr"]
plugins = ["dep:dx-compat-plugin"]
macros = ["dep:dx-compat-macro"]
html-rewriter = ["dep:dx-compat-html"]

# Full feature set
full = [
    "node-core",
    "web-core", 
    "bun-core",
    "bun-sqlite",
    "bun-s3",
    "bun-ffi",
    "bun-shell",
    "compile",
    "hmr",
    "plugins",
    "macros",
    "html-rewriter",
]

[dependencies]
# Sub-crates (optional based on features)
dx-compat-node = { path = "crates/dx-compat-node", optional = true }
dx-compat-web = { path = "crates/dx-compat-web", optional = true }
dx-compat-bun = { path = "crates/dx-compat-bun", optional = true }
dx-compat-sqlite = { path = "crates/dx-compat-sqlite", optional = true }
dx-compat-s3 = { path = "crates/dx-compat-s3", optional = true }
dx-compat-ffi = { path = "crates/dx-compat-ffi", optional = true }
dx-compat-shell = { path = "crates/dx-compat-shell", optional = true }
dx-compat-compile = { path = "crates/dx-compat-compile", optional = true }
dx-compat-hmr = { path = "crates/dx-compat-hmr", optional = true }
dx-compat-plugin = { path = "crates/dx-compat-plugin", optional = true }
dx-compat-macro = { path = "crates/dx-compat-macro", optional = true }
dx-compat-html = { path = "crates/dx-compat-html", optional = true }

# Common dependencies
thiserror = "2.0"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.41", features = ["full", "test-util"] }
tempfile = "3.14"

[[bench]]
name = "compatibility_bench"
harness = false
