[package]
name = "dx-js-monorepo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["DX Runtime Team <dev@dx-www.com>"]
description = "Binary-first monorepo management system with 30-100x performance improvements"
repository = "https://github.com/dx-www/dx-js-monorepo"
documentation = "https://docs.rs/dx-js-monorepo"
keywords = ["monorepo", "workspace", "binary", "performance", "task-runner"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
license = "MIT"

[lib]
name = "dx_js_monorepo"
path = "src/lib.rs"

[dependencies]
# Zero-copy memory mapping
memmap2 = "0.9"

# Fast hashing
blake3 = { version = "1.5", features = ["rayon"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Cryptographic signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
bytemuck = { version = "1.18", features = ["derive"] }
bytes = "1.5"

# Error handling
thiserror = "2.0"

# Parallelism
rayon = "1.10"

# File watching
notify = "6.1"

# Bit manipulation
bitvec = "1.0"

# Collections
rustc-hash = "1.1"

# Optional serde support
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
# Property-based testing
proptest = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3.10"

[features]
default = ["config"]
config = ["serde", "serde_json", "toml"]

# Benchmarks will be added when implementation is complete
# [[bench]]
# name = "workspace_load"
# harness = false
# 
# [[bench]]
# name = "task_execution"
# harness = false
